--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,4 +1,4 @@
-FROM chand1012/tensorflow:2.5.0-py3
+FROM chand1012/tensorflow:2.5.0
 
 RUN mkdir /gpt-2
 WORKDIR /gpt-2
@@ -6,5 +6,4 @@ ADD . /gpt-2
 RUN pip3 install -r requirements.txt
 RUN python3 download_model.py 124M
 RUN python3 download_model.py 355M
-RUN python3 download_model.py 774M
-RUN python3 download_model.py 1558M
+# additional models would not build on the Pi
